Prevent site from breaking when too small

--- a/frontend/app/containers/HomePage/styles.css
+++ b/frontend/app/containers/HomePage/styles.css
@@ -1,5 +1,6 @@
 .header {
 	position: relative;
+	min-height: 800px;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
@@ -98,12 +99,13 @@
 
 .headerContentLogo svg {
 	width: 350px;
+	max-width: 100%;
 	fill: white;
 	color: white;
 }
 
 .contact {
-	display: flex;	
+	display: flex;
 	align-items: center;
 	flex-direction: column;
 	background: #6d6b6e;
